petite mise à jour
J'avais un soucis avec le papier...une majuscule!

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<center>
         <div id="block-jeu">
                  <div class="button"><button id="pierre"><img src="Gwonam pierre.png" id="taillebouton"></button></div>
-                 <div class="button"><button id="papier"><img src="Gwonam papier.png" id="taillebouton"></button></div>
+                 <div class="button"><button id="papier"><img src="Gwonam Papier.png" id="taillebouton"></button></div>
                  <div class="button"><button id="ciseaux"><img src="Gwonam ciseau.png" id="taillebouton"></button></div>
             <div id="statut-jeu"></div>
         </div>
