--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- Le script au-dessus me permet de faire le changement de tableau quand Gwonam a fait ses 4 duels, ce qui me permet de basculer juste après au tableau des scores depuis le tableau de jeu et vice-versa! :D -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="Pierre-Papier-Ciseau avec Gwonam.css">
 </head>
 
 <body>
